--- a/examples/conf/config.json
+++ b/examples/conf/config.json
@@ -4,7 +4,7 @@
             "collector": {
                 "nginx": {
                     "all": {
-                        "nginx_status_url": "http://localhost/status"
+                        "nginx_server_url": "http://localhost/status"
                     }
                 }
             }
